# CarRace2D

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cspell.json  main.cpp
